tests/sintax-semanth/should_fail/test11Wrong.tds
//This test should fail because a semicolon is missing.
program
begin
	bool fun(integer w)
		begin
			integer a = 5
		end
end